V4126: Overall update and fixing

--- a/Prevu.Synoptics.V4126_Cotiplast-PET/Details/D020.xaml
+++ b/Prevu.Synoptics.V4126_Cotiplast-PET/Details/D020.xaml
@@ -11,7 +11,6 @@
              x:Class="Prevu.Synoptics.D020" >
 
     <Canvas  Height="486" Width="625">
-        <Labels:Pipe Width="25" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="40" Canvas.Top="338" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="401" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="134" Canvas.Top="164" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="34" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="315" Canvas.Top="148" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
@@ -41,7 +40,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="80" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="90" Canvas.Top="338"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="129" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="41" Canvas.Top="338"/>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Center" Width="133" StatusComponent="020-02-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="252" Canvas.Top="291"/>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="98" StatusComponent="020-02-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="334" Canvas.Top="338">
             <Labels:Pipe.RenderTransform>
@@ -57,8 +56,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="30" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="210" Canvas.Top="338"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="49" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="213" Canvas.Top="360">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="30" StatusComponent="020-21-CV1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="210" Canvas.Top="338"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="49" StatusComponent="020-21-CV1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="213" Canvas.Top="360">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
