--- a/Prevu.Synoptics.V4126_Cotiplast-PET/Details/D330.xaml
+++ b/Prevu.Synoptics.V4126_Cotiplast-PET/Details/D330.xaml
@@ -12,7 +12,7 @@
     <Canvas Height="550" Width="620">
         <Labels:Pipe Width="68" StatusComponent="331-01-MA1" PipeHeight="Medium" Canvas.Left="515" Canvas.Top="403" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="114" RenderTransformOrigin="0.5,0.5" Color="Chemicals" StatusComponent="332-21-CV1" Canvas.Left="100" Canvas.Top="255" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="188" StatusComponent="324-21-CV1" PipeHeight="Medium" Canvas.Left="227" Canvas.Top="131" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="324-21-CV1" VisibilitySignal="LS1">
+        <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="188" StatusComponent="322-01-MA1" PipeHeight="Medium" Canvas.Left="227" Canvas.Top="131" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="324-21-CV1" VisibilitySignal="LS1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
