--- a/Prevu.Synoptics.V4126_Cotiplast-PET/Pages/P020.xaml
+++ b/Prevu.Synoptics.V4126_Cotiplast-PET/Pages/P020.xaml
@@ -26,7 +26,6 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-
         <Labels:Pipe StatusComponent="030-01-MA1" Width="96" PipeHeight="Medium" Canvas.Left="1059" Canvas.Top="530" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -34,7 +33,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe StatusComponent="024-01-MA1" Width="175" PipeHeight="Medium" Canvas.Left="563" Canvas.Top="390" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent=""/>
+        <Labels:Pipe StatusComponent="024-01-MA1" Width="131" PipeHeight="Medium" Canvas.Left="563" Canvas.Top="390" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent=""/>
         <Labels:Pipe StatusComponent="030-01-MA1" Width="133" PipeHeight="Medium" Canvas.Left="979" Canvas.Top="487" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe StatusComponent="020-23-CV1" HorizontalAlignment="Left" VerticalAlignment="Center" Width="60" PipeHeight="Medium" Canvas.Left="333" Canvas.Top="538"/>
         <Labels:Pipe StatusComponent="018-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center" Width="218" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="149" Canvas.Top="383">
@@ -118,11 +117,7 @@
             </Machines:CV_Valve.RenderTransform>
         </Machines:CV_Valve>
         <Machines:V01_SB_Sfaldaballe Canvas.Left="174" Canvas.Top="488" Height="166" Width="167" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:Buffer_belt HorizontalAlignment="Left" VerticalAlignment="Center" Height="70" Width="192" Canvas.Left="36" Canvas.Top="268"/>
-        <Machines:Radar HorizontalAlignment="Left" VerticalAlignment="Center" Height="36" Width="31" Canvas.Left="211" Canvas.Top="447"/>
-        <Machines:Waste Height="46" Width="44" Canvas.Left="865" Canvas.Top="581" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:Waste Height="46" Width="44" Canvas.Left="957" Canvas.Top="581" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:Waste Height="46" Width="44" Canvas.Left="630" Canvas.Top="242" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_Manual_Selection Canvas.Left="1148" Canvas.Top="604" Height="70" Width="45"/>
         <Machines:NT_ConveyorBelt Height="1" Width="134" Canvas.Left="1246" Canvas.Top="668" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_Material_Inlet_Outlet Canvas.Left="29" Canvas.Top="227" Height="69" Width="53" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_VRR_DryTrommel Canvas.Left="833" Canvas.Top="446" Height="122" Width="200" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -130,6 +125,11 @@
         <Machines:NT_ConveyorBelt Height="3" Width="155" Canvas.Left="530" Canvas.Top="206" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:NT_ConveyorBelt Height="1" Width="134" Canvas.Left="666" Canvas.Top="385" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:NT_ConveyorBelt Height="1" Width="134" Canvas.Left="1081" Canvas.Top="575" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:Buffer_belt HorizontalAlignment="Left" VerticalAlignment="Center" Height="70" Width="192" Canvas.Left="36" Canvas.Top="268"/>
+        <Machines:Radar HorizontalAlignment="Left" VerticalAlignment="Center" Height="36" Width="31" Canvas.Left="211" Canvas.Top="447"/>
+        <Machines:Waste Height="46" Width="44" Canvas.Left="865" Canvas.Top="581" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:Waste Height="46" Width="44" Canvas.Left="957" Canvas.Top="581" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:Waste Height="46" Width="44" Canvas.Left="630" Canvas.Top="242" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:Waste Height="46" Width="44" Canvas.Left="1104" Canvas.Top="623" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="026-01-MA1" Canvas.Left="688" Canvas.Top="414" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="096-01-MA1" Canvas.Left="1122" Canvas.Top="515" HorizontalAlignment="Left" VerticalAlignment="Center"/>
