--- a/Prevu.Synoptics.V4126_Cotiplast-PET/Pages/P230.xaml
+++ b/Prevu.Synoptics.V4126_Cotiplast-PET/Pages/P230.xaml
@@ -21,7 +21,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="168" Canvas.Top="521" StatusComponent="268-01-MA1" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" Canvas.Left="1070" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="86" Canvas.Top="562" StatusComponent="268-01-MA1" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" Canvas.Left="1111" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -82,7 +82,7 @@
         <Labels:Pipe Color="Water" Width="183" StatusComponent="292-01-MA1" Canvas.Left="213" Canvas.Top="594" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Color="Water" Width="74" StatusComponent="292-01-MA1" Canvas.Left="416" Canvas.Top="584" Icon="Right" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Color="Water" Width="162" StatusComponent="292-01-MA1" Canvas.Left="516" Canvas.Top="593" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="136" RenderTransformOrigin="0.5,0.5" StatusComponent="230-01-MA1" PipeHeight="Medium" Canvas.Left="313" Canvas.Top="381">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="90" RenderTransformOrigin="0.5,0.5" StatusComponent="230-01-MA1" PipeHeight="Medium" Canvas.Left="336" Canvas.Top="404">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -153,6 +153,6 @@
         <Labels:JumpLabel JumpFromLabel="232-01-MA1" JumpToLabel="292-01-MA1" Canvas.Left="61" Canvas.Top="427" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel JumpFromLabel="236-01-MA1" JumpToLabel="283-01-MA1" Canvas.Left="516" Canvas.Top="701" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel JumpFromLabel="230-01-MA1" JumpToLabel="291-01-MA1" Canvas.Left="61" Canvas.Top="302" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:JumpLabel JumpFromLabel="298-01-MA1" JumpToLabel="320-41-LT1" Canvas.Left="1340" Canvas.Top="664" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:JumpLabel JumpFromLabel="298-01-MA1" JumpToLabel="320-01-MA1" Canvas.Left="1340" Canvas.Top="664" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     </Canvas>
 </UserControl>
