--- a/Prevu.Synoptics.V4126_Cotiplast-PET/Pages/P288.xaml
+++ b/Prevu.Synoptics.V4126_Cotiplast-PET/Pages/P288.xaml
@@ -28,7 +28,7 @@
         </Labels:Pipe>
         <Labels:Pipe Color="Water" Width="288" StatusComponent="292-01-MA1" Canvas.Left="1040" Canvas.Top="524" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Color="Water" Width="304" StatusComponent="291-01-MA1" Canvas.Left="1029" Canvas.Top="449" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="190" StatusComponent="236-01-MA1" Color="Water" Canvas.Left="312" Canvas.Top="257" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="190" StatusComponent="236-01-MA1" Color="Water" Canvas.Left="312" Canvas.Top="258" HorizontalAlignment="Center" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -46,7 +46,7 @@
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct" Width="111" StatusComponent="286-01-MA1" Canvas.Left="457" Canvas.Top="570"/>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="107" StatusComponent="286-21-CV2" RenderTransformOrigin="0.5,0.5" Canvas.Left="339" Canvas.Top="566"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="75" StatusComponent="286-21-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Left="341" Canvas.Top="532"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="168" RenderTransformOrigin="0.5,0.5" StatusComponent="283-01-MA1" Canvas.Left="333" Canvas.Top="433">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="168" RenderTransformOrigin="0.5,0.5" StatusComponent="236-01-MA1" Canvas.Left="333" Canvas.Top="433">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
