--- a/Prevu.Synoptics.V4126_Cotiplast-PET/Pages/P330.xaml
+++ b/Prevu.Synoptics.V4126_Cotiplast-PET/Pages/P330.xaml
@@ -9,7 +9,7 @@
              x:Class="Prevu.Synoptics.P330" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas>
-        <Labels:Pipe Width="165" StatusComponent="324-21-CV1" PipeHeight="Medium"  Canvas.Left="848" Canvas.Top="214" VisibilityComponent="324-21-CV1" VisibilitySignal="LS1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="165" StatusComponent="322-01-MA1" PipeHeight="Medium"  Canvas.Left="848" Canvas.Top="214" VisibilityComponent="324-21-CV1" VisibilitySignal="LS1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="164" StatusComponent="298-01-MA1" PipeHeight="Medium"  Canvas.Left="139" Canvas.Top="271" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -25,7 +25,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="156" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="1069" Canvas.Top="359" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="156" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="1069" Canvas.Top="360" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="335-21-CV1" VisibilitySignal="LS1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -51,22 +51,22 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="306" StatusComponent="324-21-CV1" PipeHeight="Medium"  VisibilityComponent="324-21-CV1" VisibilitySignal="LS1" Canvas.Left="700" Canvas.Top="362" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="306" StatusComponent="322-01-MA1" PipeHeight="Medium"  VisibilityComponent="324-21-CV1" VisibilitySignal="LS1" Canvas.Left="700" Canvas.Top="362" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="290" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="603" Canvas.Top="426" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="288" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="604" Canvas.Top="427" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="330-21-CV1" VisibilitySignal="LS1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="166" StatusComponent="324-21-CV1" PipeHeight="Medium"  Canvas.Left="1090" Canvas.Top="214" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="324-21-CV1" VisibilitySignal="LS2"/>
-        <Labels:Pipe Width="192" StatusComponent="324-21-CV1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5"  Canvas.Left="1155" Canvas.Top="305" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="324-21-CV1" VisibilitySignal="LS2">
+        <Labels:Pipe Width="166" StatusComponent="322-01-MA1" PipeHeight="Medium"  Canvas.Left="1090" Canvas.Top="214" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="324-21-CV1" VisibilitySignal="LS2"/>
+        <Labels:Pipe Width="192" StatusComponent="322-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5"  Canvas.Left="1155" Canvas.Top="305" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="324-21-CV1" VisibilitySignal="LS2">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -87,7 +87,7 @@
         <Labels:DetailsLabel ComponentName="335-VIEW" DetailsPageName="D335" Canvas.Left="1172" Canvas.Top="547" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:JumpLabel JumpFromLabel="330-WASHING" JumpToLabel="373-01-MA1" Canvas.Left="622" Canvas.Top="252" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:JumpLabel JumpFromLabel="330-WASHING" JumpToLabel="350-01-MA1" Canvas.Left="1353" Canvas.Top="673" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="320-41-LT1" JumpToLabel="298-01-MA1" Canvas.Left="95" Canvas.Top="163" />
+        <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Top" JumpFromLabel="320-01-MA1" JumpToLabel="298-01-MA1" Canvas.Left="72" Canvas.Top="164" />
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="322-01-MA1" Canvas.Left="426" Canvas.Top="262" />
         <Labels:DeviceLabel ComponentName="330-WASHING" Canvas.Left="963" Canvas.Top="516" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="330-MIXER" Canvas.Left="752" Canvas.Top="593" HorizontalAlignment="Center" VerticalAlignment="Top"/>
