--- a/Prevu.Synoptics.V4126_Cotiplast-PET/Pages/P350.xaml
+++ b/Prevu.Synoptics.V4126_Cotiplast-PET/Pages/P350.xaml
@@ -18,7 +18,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="343" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="371-21-CV1" Canvas.Left="414" Canvas.Top="525" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="343" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="357-21-CV1" Canvas.Left="414" Canvas.Top="525" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -57,8 +57,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="211" StatusComponent="336-01-MA1" PipeHeight="Medium" Canvas.Left="248" Canvas.Top="45" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="211" StatusComponent="331-01-MA1" PipeHeight="Medium" Canvas.Left="248" Canvas.Top="79" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="211" StatusComponent="336-01-MA1" PipeHeight="Medium" Canvas.Left="248" Canvas.Top="55" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="211" StatusComponent="331-01-MA1" PipeHeight="Medium" Canvas.Left="248" Canvas.Top="74" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="334" StatusComponent="350-01-MA1" PipeHeight="Medium" Canvas.Left="623" Canvas.Top="208"/>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="114" RenderTransformOrigin="0.5,0.5" StatusComponent="350-01-MA1" Canvas.Left="434" Canvas.Top="245">
             <Labels:Pipe.RenderTransform>
@@ -68,8 +68,8 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="275" RenderTransformOrigin="0.5,0.5" StatusComponent="350-01-MA1" Canvas.Left="489" Canvas.Top="301"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="196" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="359-21-CV1" Text="{lex:Loc DETERGENT}" Canvas.Left="376" Canvas.Top="414"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="215" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="371-21-CV1" Text="{lex:Loc CAUSTIC}" Canvas.Left="373" Canvas.Top="348"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="196" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="358-21-CV1" Text="{lex:Loc DETERGENT}" Canvas.Left="376" Canvas.Top="414"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="215" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="357-21-CV1" Text="{lex:Loc CAUSTIC}" Canvas.Left="373" Canvas.Top="348"/>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="215" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="359-21-CV1" Canvas.Left="448" Canvas.Top="592">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -77,7 +77,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="277" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="371-21-CV1" Canvas.Left="432" Canvas.Top="558">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="277" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="358-21-CV1" Canvas.Left="432" Canvas.Top="558">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -171,9 +171,9 @@
         <Machines:WaterPump Height="45" Width="45" RenderTransformOrigin="0.5,0.5" Color="Chemicals" Canvas.Left="354" Canvas.Top="401" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Machines:WaterPump Height="45" Width="45" RenderTransformOrigin="0.5,0.5" Color="Chemicals" Canvas.Left="354" Canvas.Top="467" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:JumpLabel JumpFromLabel="380-01-MA1" JumpToLabel="420-01-MA1" Canvas.Left="1433" Canvas.Top="424" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="350-01-MA1" JumpToLabel="330-MIXER" Canvas.Left="186" Canvas.Top="33"/>
-        <Labels:JumpLabel JumpFromLabel="373-01-MA1" JumpToLabel="330-MIXER" Direction="Left" Canvas.Left="55" Canvas.Top="728" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:JumpLabel JumpFromLabel="350-01-MA1" JumpToLabel="100-01-MA1" Canvas.Left="1001" Canvas.Top="728" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="350-01-MA1" JumpToLabel="330-MIXER" Canvas.Left="186" Canvas.Top="34"/>
+        <Labels:JumpLabel JumpFromLabel="373-01-MA1" JumpToLabel="330-WASHING" Direction="Left" Canvas.Left="55" Canvas.Top="728" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:JumpLabel JumpFromLabel="377-01-MA1" JumpToLabel="100-01-MA1" Canvas.Left="1001" Canvas.Top="728" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="380-01-MA1" Loaded="DeviceLabel_Loaded" Canvas.Left="1259" Canvas.Top="510" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="380-21-CV1" Loaded="DeviceLabel_Loaded" Canvas.Left="1123" Canvas.Top="273" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="380-22-CV1" Loaded="DeviceLabel_Loaded" Canvas.Left="1109" Canvas.Top="350" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -193,6 +193,5 @@
         <Labels:DeviceLabel ComponentName="357-21-CV1" Canvas.Left="245" Canvas.Top="332" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="358-21-CV1" Canvas.Left="245" Canvas.Top="398" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="359-21-CV1" Canvas.Left="245" Canvas.Top="464" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-
     </Canvas>
 </UserControl>
