--- a/Prevu.Synoptics.V4126_Cotiplast-PET/Pages/P430.xaml
+++ b/Prevu.Synoptics.V4126_Cotiplast-PET/Pages/P430.xaml
@@ -19,7 +19,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="232" Canvas.Top="225" StatusComponent="433-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="673" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="433-21-CV1" VisibilitySignal="LS1">
+        <Labels:Pipe Width="232" Canvas.Top="225" StatusComponent="433-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="673" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -100,7 +100,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="49" Canvas.Top="152" StatusComponent="453-01-MA1" Canvas.Left="164" Color="Water" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="49" Canvas.Top="151" StatusComponent="453-01-MA1" Canvas.Left="163" Color="Water" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="100" StatusComponent="440-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="772" Canvas.Top="467" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -109,7 +109,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="202" StatusComponent="455-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1226" Canvas.Top="277" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="338" VisibilityComponent="433-21-CV1" Canvas.Top="111" StatusComponent="433-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="784" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilitySignal="LS1"/>
+        <Labels:Pipe Width="338" Canvas.Top="111" StatusComponent="433-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="784" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="50" StatusComponent="444-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1191" Canvas.Top="596" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="54" StatusComponent="444-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1212" Canvas.Top="621" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
@@ -118,14 +118,14 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="118" RenderTransformOrigin="0.5,0.5" StatusComponent="444-01-MA1" VisibilityComponent="" Canvas.Left="579" Canvas.Top="671" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Color="Water" Width="118" RenderTransformOrigin="0.5,0.5" StatusComponent="444-01-MA1" Canvas.Left="579" Canvas.Top="671" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="482" Color="Water" StatusComponent="444-01-MA1" VisibilityComponent="" Canvas.Left="636" Canvas.Top="614" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="482" Color="Water" StatusComponent="444-01-MA1" Canvas.Left="636" Canvas.Top="614" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Machines:WaterPump Width="44" VerticalAlignment="Center" Canvas.Top="319" RenderTransformOrigin="0.5,0.5" Canvas.Left="610" Height="45" HorizontalAlignment="Left"/>
         <Machines:STR_Washing_reactor_B Height="162" Width="155" Canvas.Left="163" Canvas.Top="90" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:CV_Valve_001 Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539" Canvas.Left="397" Canvas.Top="505" HorizontalAlignment="Center" VerticalAlignment="Top">
@@ -146,7 +146,7 @@
         <Machines:V01_WCE_Centrifuge Canvas.Left="1101" Canvas.Top="101" Height="118" Width="150" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_VB_VibratingScreen Canvas.Left="665" Canvas.Top="410" Height="100" Width="100" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_VB_VibratingScreen Canvas.Left="1096" Canvas.Top="587" Height="100" Width="100" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_VSP_SepTank_w3Paddles Canvas.Left="365" Canvas.Top="101" Height="263" Width="210" HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="430-41-LT1" TrendName="LEVEL"/>
+        <Machines:V01_VSP_SepTank_w3Paddles Canvas.Left="365" Canvas.Top="101" Height="263" Width="210" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:Waste Height="46" Width="44" Canvas.Left="1217" Canvas.Top="624" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:WaterPump Height="45" Width="45" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="729" Canvas.Top="750" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:WaterPump Height="45" Width="45" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="266" Canvas.Top="749" HorizontalAlignment="Center" VerticalAlignment="Top">
@@ -164,11 +164,13 @@
                 </TransformGroup>
             </Rectangle.RenderTransform>
         </Rectangle>
+        <Machines:V01_SCW_ScrewConveyor_straight Canvas.Left="1245" Canvas.Top="400" Height="5" Width="146" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_DCE_Centrifuge Canvas.Left="992" Canvas.Top="384" Height="172" Width="115" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_SCW_ScrewConveyor_straight Canvas.Left="814" Canvas.Top="514" Height="5" Width="114" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_BBF_SingleBag Canvas.Left="1330" Canvas.Top="470" HorizontalAlignment="Left" VerticalAlignment="Top" Height="96" Width="94"/>
         <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="960" Canvas.Top="400" Height="30" Width="30" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5"/>
-
+        <Labels:DetailsLabel ComponentName="430-VIEW" DetailsPageName="D430" HideComponentName="True" Canvas.Left="509" Canvas.Top="50" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DetailsLabel ComponentName="446-BAG" DetailsPageName="D446" HideComponentName="True" Canvas.Left="1412" Canvas.Top="571" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="443-02-MA1" Canvas.Left="859" Canvas.Top="388" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="442-01-MA1" Canvas.Left="847" Canvas.Top="540" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="443-01-MA1" Canvas.Left="992" Canvas.Top="334" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -187,12 +189,9 @@
         <Labels:DeviceLabel ComponentName="440-01-MA1" Canvas.Left="670" Canvas.Top="476" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="450-42-TT1" RenderTransformOrigin="0.5,0.5" Canvas.Left="559" Canvas.Top="717" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="444-01-MA1" Canvas.Left="1101" Canvas.Top="653" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="446-62-BAG" Canvas.Left="1314" Canvas.Top="571" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Labels:JumpLabel JumpFromLabel="455-01-MA1" JumpToLabel="524-01-MA1" Canvas.Left="1389" Canvas.Top="247" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:JumpLabel JumpFromLabel="457-01-MA1" JumpToLabel="100-01-MA1" Canvas.Left="837" Canvas.Top="736" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="420-01-MA1" JumpToLabel="380-01-MA1" Canvas.Left="58" Canvas.Top="100"/>
-        <Labels:DetailsLabel ComponentName="430-VIEW" DetailsPageName="D430" HideComponentName="True" Canvas.Left="509" Canvas.Top="50" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DetailsLabel ComponentName="446-BAG" DetailsPageName="D446" HideComponentName="True" Canvas.Left="1412" Canvas.Top="571" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="446-62-BAG" Canvas.Left="1314" Canvas.Top="571" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Machines:V01_SCW_ScrewConveyor_straight Canvas.Left="1245" Canvas.Top="400" Height="5" Width="146" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Top" JumpFromLabel="420-01-MA1" JumpToLabel="380-01-MA1" Canvas.Left="35" Canvas.Top="101"/>
     </Canvas>
 </UserControl>
