--- a/Prevu.Synoptics.V4126_Cotiplast-PET/Pages/P530.xaml
+++ b/Prevu.Synoptics.V4126_Cotiplast-PET/Pages/P530.xaml
@@ -8,21 +8,21 @@
              x:Class="Prevu.Synoptics.P530" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas>
-        <Labels:Pipe Width="80" StatusComponent="548-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1011" Canvas.Top="226" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="80" StatusComponent="548-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1004" Canvas.Top="226" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="520" StatusComponent="548-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="671" Canvas.Top="446" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="520" StatusComponent="548-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="641" Canvas.Top="446" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="130" StatusComponent="548-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="926" Canvas.Top="191" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="152" StatusComponent="548-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="897" Canvas.Top="191" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="46" StatusComponent="557-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1217" Canvas.Top="502" HorizontalAlignment="Left" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -39,9 +39,9 @@
         </Labels:Pipe>
         <Labels:Pipe Width="89" RenderTransformOrigin="0.5,0.5" StatusComponent="558-01-MA1" Canvas.Left="1218" Canvas.Top="704" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="104" StatusComponent="558-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1340" Canvas.Top="701" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="61" StatusComponent="557-02-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1220" Canvas.Top="416" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="153" StatusComponent="455-01-MA1" PipeHeight="Medium" Canvas.Left="130" Canvas.Top="307" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="45" StatusComponent="526-01-MA1" PipeHeight="Medium" Canvas.Left="486" Canvas.Top="148" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="61" StatusComponent="557-02-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1205" Canvas.Top="415" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="153" StatusComponent="455-01-MA1" PipeHeight="Medium" Canvas.Left="110" Canvas.Top="307" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="58" StatusComponent="526-01-MA1" PipeHeight="Medium" Canvas.Left="473" Canvas.Top="148" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe 
             StatusComponent="534-01-MA1" 
             VisibilityComponent="" 
@@ -76,46 +76,46 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="80" StatusComponent="555-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1011" Canvas.Top="340" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="80" StatusComponent="555-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1004" Canvas.Top="340" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="145" StatusComponent="548-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="789" Canvas.Top="701" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="116" StatusComponent="548-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="789" Canvas.Top="701" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="89" RenderTransformOrigin="0.5,0.5" StatusComponent="548-01-MA1" Canvas.Left="655" Canvas.Top="704" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Rectangle Height="55" Canvas.Left="290" Canvas.Top="134" Width="75" Fill="#FF8A8A8A" RadiusX="10" RadiusY="10" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:V01_DCE_Centrifuge Canvas.Left="342" Canvas.Top="133" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:SCW_ScrewConveyor_straight RenderTransformOrigin="0.5,0.5" Width="118" Height="18" Canvas.Left="230" Canvas.Top="302" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Rectangle Height="55" Canvas.Left="270" Canvas.Top="134" Width="75" Fill="#FF8A8A8A" RadiusX="10" RadiusY="10" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_DCE_Centrifuge Canvas.Left="322" Canvas.Top="133" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:SCW_ScrewConveyor_straight RenderTransformOrigin="0.5,0.5" Width="118" Height="18" Canvas.Left="210" Canvas.Top="302" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Machines:DRY_HeatingBattery Height="50" Width="52" Canvas.Left="429" Canvas.Top="457" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_DRY_FluidBedDryer Canvas.Left="505" Canvas.Top="432" Height="124" Width="213" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:V01_VS_Airlock Canvas.Left="1022" Canvas.Top="255" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_VS_Airlock Canvas.Left="1015" Canvas.Top="255" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_ScarpaTrasporto Canvas.Left="732" Canvas.Top="673" Height="43" Width="66" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="625" Canvas.Top="681" Height="50" Width="50" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="359" Canvas.Top="456" Height="50" Width="50" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="648" Canvas.Top="357" Height="50" Width="50" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="296" Canvas.Top="140" Height="44" Width="43" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="276" Canvas.Top="140" Height="44" Width="43" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_DV_GrinderDiverter Canvas.Left="1227" Canvas.Top="402" Height="115" Width="108" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Machines:Waste Height="46" Width="44" Canvas.Left="729" Canvas.Top="393" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:V01_ALV_VibratingFeeder Canvas.Left="1028" Canvas.Top="354" Height="114" Width="210" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_ALV_VibratingFeeder Canvas.Left="1021" Canvas.Top="354" Height="114" Width="210" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:Waste Height="46" Width="44" Canvas.Left="1218" Canvas.Top="495" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Machines:V01_MagneticRoll Canvas.Left="1266" Canvas.Top="439" Height="29" Width="30" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Machines:V01_ScarpaTrasporto Canvas.Left="1295" Canvas.Top="673" Height="43" Width="66" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="1188" Canvas.Top="681" Height="50" Width="50" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="460-01-MA1" JumpToLabel="455-01-MA1" Canvas.Left="65" Canvas.Top="277"/>
-        <Labels:JumpLabel JumpFromLabel="558-01-MA1" JumpToLabel="810-01-MA1" Canvas.Left="1404" Canvas.Top="671" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Rectangle Height="44" Canvas.Left="1273" Canvas.Top="425" Width="16" Fill="#808080" RadiusX="10" RadiusY="10" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DetailsLabel ComponentName="530-DRY" DetailsPageName="D530" Canvas.Left="396" Canvas.Top="510" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="524-01-MA1" Canvas.Left="205" Canvas.Top="329" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="526-01-MA1" Canvas.Left="363" Canvas.Top="75" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="526-02-MA1" Canvas.Left="193" Canvas.Top="137" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="524-01-MA1" Canvas.Left="185" Canvas.Top="329" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="526-01-MA1" Canvas.Left="343" Canvas.Top="75" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="526-02-MA1" Canvas.Left="173" Canvas.Top="137" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="532-01-MA1" Width="96" Canvas.Left="625" Canvas.Top="299" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="548-01-MA1" Canvas.Left="604" Canvas.Top="626" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="555-01-MA1" Canvas.Left="1088" Canvas.Top="264" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="555-01-MA1" Canvas.Left="1081" Canvas.Top="264" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="530-01-MA1" Canvas.Left="572" Canvas.Top="470" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="557-02-MA1" Canvas.Left="1088" Canvas.Top="428" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="557-02-MA1" Canvas.Left="1081" Canvas.Top="428" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="557-01-MA1" Canvas.Left="1328" Canvas.Top="397" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="558-01-MA1" Canvas.Left="1167" Canvas.Top="626" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:V01_DV_GrinderDiverter Canvas.Left="1227" Canvas.Top="402" Height="115" Width="108" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Rectangle Height="44" Canvas.Left="1273" Canvas.Top="425" Width="16" Fill="#808080" RadiusX="10" RadiusY="10" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Machines:V01_MagneticRoll Canvas.Left="1266" Canvas.Top="439" Height="29" Width="30" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="524-01-MA1" JumpToLabel="455-01-MA1" Canvas.Left="65" Canvas.Top="277"/>
+        <Labels:JumpLabel JumpFromLabel="558-01-MA1" JumpToLabel="810-01-MA1" Canvas.Left="1404" Canvas.Top="671" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     </Canvas>
 </UserControl>
