--- a/Prevu.Synoptics.V4126_Cotiplast-PET/Pages/P880.xaml
+++ b/Prevu.Synoptics.V4126_Cotiplast-PET/Pages/P880.xaml
@@ -49,7 +49,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="174" RenderTransformOrigin="0.5,0.5" StatusComponent="880-01-ECS10" Canvas.Left="266" Canvas.Top="476" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top" />
+        <Labels:Pipe Width="174" RenderTransformOrigin="0.5,0.5" StatusComponent="880-01-ECS1" Canvas.Left="266" Canvas.Top="476" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Labels:Pipe Width="238" StatusComponent="885-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="190" Canvas.Top="128" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="366" StatusComponent="883-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="744" Canvas.Top="263" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
@@ -59,22 +59,22 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="107" RenderTransformOrigin="0.5,0.5" StatusComponent="883-01-MA1"  Color="ByProduct" Canvas.Left="925" Canvas.Top="82" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="128" StatusComponent="880-01-ECS13" RenderTransformOrigin="0.5,0.5" Canvas.Left="519" Canvas.Top="436" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="128" StatusComponent="880-01-ECS6" RenderTransformOrigin="0.5,0.5" Canvas.Left="519" Canvas.Top="436" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="110" StatusComponent="880-01-ECS13" RenderTransformOrigin="0.5,0.5" Canvas.Left="581" Canvas.Top="498" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="" VisibilitySignal=""/>
-        <Labels:Pipe Width="60" StatusComponent="880-01-ECS13" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="593" Canvas.Top="416" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="110" StatusComponent="880-01-ECS6" RenderTransformOrigin="0.5,0.5" Canvas.Left="581" Canvas.Top="498" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="" VisibilitySignal=""/>
+        <Labels:Pipe Width="60" StatusComponent="880-01-ECS6" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="593" Canvas.Top="416" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="149" StatusComponent="880-01-ECS13" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="621" Canvas.Top="444" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="149" StatusComponent="880-01-ECS6" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="621" Canvas.Top="444" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="300" RenderTransformOrigin="0.5,0.5" StatusComponent="887-01-MA1" Canvas.Left="480" Canvas.Top="72" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="430" StatusComponent="887-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="563" Canvas.Top="285" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
@@ -83,7 +83,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="57" StatusComponent="880-01-ECS13" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="789" Canvas.Top="444" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="60" StatusComponent="880-01-ECS6" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="786" Canvas.Top="444" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="61" StatusComponent="883-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="868" Canvas.Top="444" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="66" StatusComponent="887-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="714" Canvas.Top="498" VisibilityComponent="" VisibilitySignal="" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="55" RenderTransformOrigin="0.5,0.5" StatusComponent="885-01-MA1" Canvas.Left="190" Canvas.Top="476" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top" />
@@ -117,14 +117,14 @@
         </Labels:Pipe>
         <Labels:Pipe Width="356" RenderTransformOrigin="0.5,0.5" StatusComponent="888-01-MA1" PipeHeight="Medium" Canvas.Left="959" Canvas.Top="354" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Labels:Pipe Width="25" StatusComponent="885-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="450" Canvas.Top="128" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="280" RenderTransformOrigin="0.5,0.5" StatusComponent="880-01-EC1" Canvas.Left="338" Canvas.Top="536" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top" >
+        <Labels:Pipe Width="280" RenderTransformOrigin="0.5,0.5" StatusComponent="880-01-ECS1" Canvas.Left="338" Canvas.Top="536" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="84" StatusComponent="880-01-ECS10" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="396" Canvas.Top="436" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="84" StatusComponent="880-01-ECS1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="396" Canvas.Top="436" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -146,22 +146,19 @@
                 </TransformGroup>
             </Machines:V01_VT_CMM_Blower_Air_Compressor.RenderTransform>
         </Machines:V01_VT_CMM_Blower_Air_Compressor>
-        <Labels:JumpLabel JumpFromLabel="880-01-EC1" Canvas.Left="96" Canvas.Top="40" HorizontalAlignment="Center" VerticalAlignment="Top" JumpToLabel="878-01-MA1" />
         <Labels:DetailsLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="880-VIEW" DetailsPageName="D880" HideComponentName="True" Canvas.Left="518" Canvas.Top="188"/>
         <Labels:DetailsLabel ComponentName="883-BAG" DetailsPageName="D883" HideComponentName="True" Canvas.Left="1067" Canvas.Top="259" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DetailsLabel ComponentName="997-BAGS" DetailsPageName="D997" Canvas.Left="1285" Canvas.Top="610" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="883-62-BAG" Canvas.Left="971" Canvas.Top="259"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="880-62-LEV" Canvas.Left="550" Canvas.Top="188"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="880-61-LEV" Canvas.Left="420" Canvas.Top="188"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="880-01-EC1" Canvas.Left="485" Canvas.Top="364"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="880-01-ECS1" Canvas.Left="334" Canvas.Top="322"/>
         <Labels:DeviceLabel ComponentName="888-01-MA1" Canvas.Left="334" Canvas.Top="611" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Labels:DeviceLabel ComponentName="880-01-ECS10" Canvas.Left="314" Canvas.Top="258" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="880-01-ECS13" Canvas.Left="630" Canvas.Top="297" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="880-01-ECS11" Canvas.Left="314" Canvas.Top="321" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="880-01-ECS12" Canvas.Left="314" Canvas.Top="384" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="885-01-MA1" Canvas.Left="209" Canvas.Top="514" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="887-01-MA1" Canvas.Left="658" Canvas.Top="537" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="883-01-MA1" Canvas.Left="812" Canvas.Top="481" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="997-25-CV1" Canvas.Left="1265" Canvas.Top="502" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="880-01-ECS6" Canvas.Left="634" Canvas.Top="322" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:JumpLabel JumpFromLabel="880-01-EC1" Canvas.Left="96" Canvas.Top="40" HorizontalAlignment="Center" VerticalAlignment="Top" JumpToLabel="878-01-MA1" />
     </Canvas>
 </UserControl>
