--- a/Prevu.Synoptics.V4126_Cotiplast-PET/Details/D880.xaml
+++ b/Prevu.Synoptics.V4126_Cotiplast-PET/Details/D880.xaml
@@ -9,14 +9,13 @@
              mc:Ignorable="d" 
              d:Background="{DynamicResource MaterialDesignPaper}"
              x:Class="Prevu.Synoptics.D880">
-  <Canvas Height="427" Width="452">
-    <Machines:V01_FKS_FlakesSorter_DoubleCH Canvas.Left="10" Canvas.Top="10" Height="414" Width="435" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-    <Labels:SignalLabel ComponentName="880-61-LEV" SignalName="LSHA1" HorizontalAlignment="Left" VerticalAlignment="Top" Canvas.Left="53" Canvas.Top="24"/>
-    <Labels:SignalLabel ComponentName="880-61-LEV" SignalName="LSH" HorizontalAlignment="Left" VerticalAlignment="Top" Canvas.Left="53" Canvas.Top="110" />
-    <Labels:SignalLabel ComponentName="880-62-LEV" SignalName="LSHA" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="307" Canvas.Top="39"/>
-    <Labels:SignalLabel ComponentName="880-62-LEV" SignalName="LSH" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="307" Canvas.Top="94" />
-    <Labels:SignalLabel ComponentName="880-61-LEV" SignalName="LSHA2" Canvas.Left="53" Canvas.Top="63" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-    <Labels:DeviceLabel ComponentName="880-61-LEV" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="77" Canvas.Top="219"/>
-    <Labels:DeviceLabel ComponentName="880-62-LEV" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="285" Canvas.Top="219"/>
-  </Canvas>
+    <Canvas Height="427" Width="452">
+        <Machines:V01_FKS_FlakesSorter_DoubleCH Canvas.Left="10" Canvas.Top="10" Height="414" Width="435" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:SignalLabel ComponentName="880-62-LEV" SignalName="LSHA" HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.Left="271" Canvas.Top="39"/>
+        <Labels:SignalLabel ComponentName="880-62-LEV" SignalName="LSH" HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.Left="271" Canvas.Top="94" />
+        <Labels:DeviceLabel ComponentName="880-61-LEV" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="77" Canvas.Top="219"/>
+        <Labels:DeviceLabel ComponentName="880-62-LEV" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="285" Canvas.Top="219"/>
+        <Labels:SignalLabel ComponentName="880-61-LEV" SignalName="LSHA" Canvas.Left="59" Canvas.Top="39" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:SignalLabel ComponentName="880-61-LEV" SignalName="LSH" Canvas.Left="59" Canvas.Top="94" HorizontalAlignment="Left" VerticalAlignment="Center" />
+    </Canvas>
 </UserControl>
